--- a/linear_algebra.ipynb
+++ b/linear_algebra.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "83fe4c22",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "76a39f86",
    "metadata": {},
    "outputs": [],
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "48264886",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "4071486a",
    "metadata": {},
    "outputs": [],
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "50bc75e1",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "a89574e1",
    "metadata": {},
    "outputs": [],
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "id": "18af4cc3",
    "metadata": {},
    "outputs": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "id": "c38b1e4d",
    "metadata": {},
    "outputs": [],
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "a6a7f246",
    "metadata": {},
    "outputs": [],
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "id": "36c81c63",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "id": "28318c53",
    "metadata": {},
    "outputs": [],
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "id": "7ddf93e2",
    "metadata": {},
    "outputs": [
@@ -539,8 +539,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "970c6071",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Matrix = List[List[float]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69e006a5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "a0527bc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A = [[1, 2, 3],\n",
+    "     [4, 5, 6]] # Матрица A с 2 строками и 3 столбцами\n",
+    "\n",
+    "B = [[1, 2],\n",
+    "     [3, 4],\n",
+    "     [5, 6]] # Матрица B с 3 строками и 2 столбцами"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58c48e18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "1d40e6a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "05a6ebc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def shape(A: Matrix) -> Tuple[int, int]:\n",
+    "    \"\"\"Возвращает число строк A, число стобцов A\"\"\"\n",
+    "    \n",
+    "    num_rows = len(A)\n",
+    "    num_cols = len(A[0]) if A else 0 # Число элементов в первой строке\n",
+    "    \n",
+    "    return num_rows, num_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "0309f4a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(shape(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc2c9c7f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "6655385a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_row(A: Matrix, i: int) -> Vector:\n",
+    "    \"\"\"Возвращает i-ю строку A, как вектор\"\"\"\n",
+    "    return A[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "efa923ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_column(A: Matrix, j: int) -> Vector:\n",
+    "    \"\"\"Возвращает j-й столбец A, как вектор\"\"\"\n",
+    "    return [A_i[j] for A_i in A]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "1bc330c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Callable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "dc42a61f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_matrix(num_rows: int,\n",
+    "                num_cols: int,\n",
+    "                entry_fn: Callable[[int, int], float]) -> Matrix:\n",
+    "    \"\"\"Возвращает матрицу размера num_rows x num_cols, \n",
+    "    чей (i, j)-й элемент является функцией entry_fn(i, j)\"\"\"\n",
+    "    return [[entry_fn(i, j)             # Создает список с учетом i\n",
+    "             for j in range(num_cols)]  # [entry_fn(i, 0), ... ]\n",
+    "             for i in range(num_rows)]  # Создать один список для каждого i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "71eabcee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def identity_matrix(n: int) -> Matrix:\n",
+    "    \"\"\"Создает единичную квадратную матрицу\"\"\"\n",
+    "    return make_matrix(n, n, lambda i, j: 1 if i == j else 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "53d63ecf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 0, 0, 0, 0], [0, 1, 0, 0, 0], [0, 0, 1, 0, 0], [0, 0, 0, 1, 0], [0, 0, 0, 0, 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(identity_matrix(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e2e9b04",
    "metadata": {},
    "outputs": [],
    "source": []
